tests/ui/substrate/implementation/fail_weight_missing_args.stderr
error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/ui/substrate/implementation/fail_weight_missing_args.rs:29:9
   |
29 |           crate::test_pallet::Pallet::<T>::test_method(
   |  _________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
30 | |             RawOrigin::Signed(self.env.ext().address().clone()).into(),
31 | |             123
32 | |         ).unwrap();
   | |_________- an argument of type `u64` is missing
   |
note: associated function defined here
  --> tests/ui/substrate/implementation/test_pallet.rs
   |
   |         pub fn test_method(
   |                ^^^^^^^^^^^
   |             _origin: OriginFor<T>,
   |             ---------------------
   |             val: u64,
   |             --------
   |             another_val: u64
   |             ----------------
help: provide the argument
   |
29 |         crate::test_pallet::Pallet::<T>::test_method(RawOrigin::Signed(self.env.ext().address().clone()).into(), 123, /* u64 */).unwrap();
   |                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 2 arguments but 0 arguments were supplied
  --> tests/ui/substrate/implementation/fail_weight_missing_args.rs:20:1
   |
20 | #[obce::implementation]
   | ^^^^^^^^^^^^^^^^^^^^^^^ two arguments of type `u64` and `u64` are missing
   |
note: associated function defined here
  --> tests/ui/substrate/implementation/test_pallet.rs
   |
   |         pub fn test_method(
   |                ^^^^^^^^^^^
   |             _origin: OriginFor<T>,
   |             val: u64,
   |             --------
   |             another_val: u64
   |             ----------------
   = note: this error originates in the attribute macro `obce::implementation` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the arguments
   |
20 | #[obce::implementation](/* u64 */, /* u64 */)
   |                        ++++++++++++++++++++++
